# TwinOps-AI

./: .editorconfig  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CODING_STANDARDS.md  DEVELOPMENT_ROADMAP.md  DEVELOPMENT_RULES.md  PRODUCT_VISION.md  README.md  TECH_STACK.md  package.json  pnpm-lock.yaml  render.yaml
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/src/twinops/: __init__.py  main.py
apps/api/src/twinops/core/: config.py  errors.py  health.py  logging.py  meta.py  ratelimit.py  request_id.py
apps/api/src/twinops/modules/auth/: deps.py  router.py  service.py
apps/api/src/twinops/modules/chat/: router.py  service.py
apps/api/src/twinops/modules/eval/: grounding.py  run.py
apps/api/src/twinops/modules/incidents/: narrative.py  rca.py  replay.py  router.py  schemas.py  service.py
apps/api/src/twinops/modules/knowledge/: router.py  service.py
apps/api/src/twinops/modules/llm/: gateway.py
apps/api/src/twinops/modules/prediction/: engine.py
apps/api/src/twinops/modules/simulation/: engine.py
apps/api/src/twinops/modules/twin/: router.py  schemas.py  service.py  topology.py
apps/api/src/twinops/realtime/: manager.py  ticker.py  ws.py
apps/api/tests/: test_auth.py  test_chat.py  test_errors.py  test_eval.py  test_health.py  test_incidents.py  test_knowledge.py  test_llm_gateway.py  test_prediction.py  test_ratelimit.py  test_twin.py  test_ws.py
docker/: docker-compose.yml
docs/: DEPLOY.md
scripts/: demo-drive.mjs  dev-setup.ps1  dev-setup.sh  generate-contracts.sh
(+71 files in other folders)
